<resources>
    <string name="app_name">Sample</string>
    <string name="Rent_AND_Ride">"Rent AND Ride" </string>
    <string name="Where_to">Where to?</string>
    <string name="Pick_up_Location">Pick-up Location</string>
    <string name="Drop_off_Location">Drop-off Location</string>
    <string name="Return_to_different_Location">Return to different Location?</string>
    <string name="Time">Time</string>
    <string name="Pick_up_Date">Pick-up Date</string>
    <string name="Drop_off_Date">Drop-off Date</string>
    <string name="Search_for_Car">Search for Car</string>
    <string name="Due_to_Covid_19_some_destinations_maybe_unavailable_for_certain_dates">
        Due to Covid-19,some destinations maybe unavailable for certain dates. </string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title">Driver Details</string>
    <string name="msg1">Please enter the lead driver details.</string>

    <string name="fullname">Full Name:</string>
    <string name="email">Email:</string>
    <string name="phoneNum">Phone Number:</string>
    <string name="dob">Date of Birth:</string>
    <string name="country">Country/Region:</string>
    <string name="past">Past Trips</string>
    <string name="trips">Rides</string>
    <string name="complete">Trip Completed</string>



</resources> 
