<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#545481"
        android:gravity="center">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_action_nav1"
            android:text="@string/Rent_AND_Ride"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp" />
    </RelativeLayout>






    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="457dp"
        android:background="#CFE4F4"
        android:drawableStart="@drawable/ic_action_pickup"
        android:drawableEnd="@drawable/ic_action_pickup1"
        android:ems="10"
        android:hint="@string/Where_to"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="335dp"
        android:background="#CFE4F4"
        android:drawableStart="@drawable/ic_action_drop"
        android:drawableEnd="@drawable/ic_action_drop1"
        android:ems="10"
        android:hint="@string/Where_to"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="510dp"
        android:text="@string/Pick_up_Location"
        android:textColor="#545481"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="386dp"
        android:text="@string/Drop_off_Location"
        android:textColor="#545481"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="420dp"
        android:drawableStart="@drawable/ic_action_check"
        android:text="@string/Return_to_different_Location"
        android:textColor="#00008B"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="267dp"
        android:drawableStart="@drawable/ic_action_time2"
        android:drawableEnd="@drawable/ic_action_drop3"
        android:ems="10"
        android:hint="@string/Time"
        android:inputType="time"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="268dp"
        android:drawableStart="@drawable/ic_action_date2"
        android:ems="10"
        android:hint="@string/Pick_up_Date"
        android:inputType="date"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="189dp"
        android:drawableStart="@drawable/ic_action_date2"
        android:ems="10"
        android:hint="@string/Drop_off_Date"
        android:inputType="date"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="inherit"/>

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="192dp"
        android:drawableStart="@drawable/ic_action_time4"
        android:drawableEnd="@drawable/ic_action_drop3"
        android:ems="10"
        android:hint="@string/Time"
        android:inputType="time"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="46dp"
        android:text="@string/Due_to_Covid_19_some_destinations_maybe_unavailable_for_certain_dates"
        android:textColor="#3E3E87"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="120dp"
        android:background="#545481"
        android:text="@string/Search_for_Car"
        android:textColor="#fff"
        android:textSize="20sp" />


</RelativeLayout>

